# process_doppelganging

./: .appveyor.yml  CMakeLists.txt  LICENSE  README.md  binary_parser.cpp  binary_parser.h  file_helper.cpp  file_helper.h  main.cpp  proc_context.cpp  proc_context.h  win_api_ext.cpp  win_api_ext.h  win_kernel_defs.h  win_structs.h
cpp/: MinLoader.cpp  Obfuscator.cpp  README.md  docx.cpp  persistence.cpp
exe/: build.bat  demo.cpp  docx.cpp  persistence.cpp
stage1/: CMakeLists.txt  MinLoader.cpp  README.md
stage2/: build.bat  docx.cpp  persistence.cpp
stage2/ransome_pic/: Makefile  RansomePicuter.sln  RansomePicuter.vcxproj  build.bat  main.cpp
